@@ -520,7 +520,7 @@ color: #999999; font-weight: bold; padding-top: 10px; padding-bottom: 8px;">Abou
     </div>
       <div><i>"R is a reader of RSS feeds"</i></div>
       <br/>
-      <div>version 0.3.0</div>
+      <div>version 0.4.0</div>
       <div>Copyright (c) 2014, Peter Marinov and Contributors. All rights reserved.</div>
       <br/>
       <div>
