@@ -1,6 +1,9 @@
 CHANGELOG.txt, 'rrss' - R is a reader of RSS feeds
 --------------------------------------------------
 
+=== 2015-01-14, v0.4.0.0, pmarinov
+
+* Importing of feeds via OPML file from disk
 
 === 2014-10-18, v0.3.0.0, pmarinov
 
